# player

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: .mainwindow.h.swp  .vlcplayer.h.swp  mainwindow.h  vlcplayer.h
src/: .mainwindow.cpp.swp  .vlcplayer.cpp.swp  main.cpp  mainwindow.cpp  vlcplayer.cpp
